Remove unnecessary sun-misc-unsafe-memory-access argument